Replace yearly generation line chart with donut chart

--- a/app/views/communities/sections/electricity/production/_yearly_chart.html.haml
+++ b/app/views/communities/sections/electricity/production/_yearly_chart.html.haml
@@ -1,11 +1,10 @@
-- chart_title = "#{@community.grid.name.titleize} Net Generation by Year"
-= column_chart production_yearly_community_charts_path(@community), 
-  title: chart_title, 
-  xtitle: "Year", 
-  ytitle: "Net Generation", 
-  suffix: "MWh",
+- chart_title = "#{@community.grid.name.titleize} Net Generation by Type"
+= pie_chart production_yearly_community_charts_path(@community),
+  title: chart_title,
+  suffix: " MWh",
   thousands: ",",
-  empty: "No Employment Data Available",
-  loading: "Empolyment Data Loading...",
-  library: { animation: { duration: 500 } },
-  download: {background: "#ffffff", filename: chart_title.parameterize, format: "png"}
+  donut: true,
+  empty: "No Yearly Generation Data Available",
+  loading: "Loading Yearly Generation Data...",
+  library: { animation: { duration: 500 }, tooltip: { pointFormat: '{point.name}: <b>{point.y} MWh</b>' }, plugins: { legend: { title: { display: true, text: "Fuel Type"}, display: true, position: 'left' } }   },
+  download: { background: "#ffffff", filename: chart_title.parameterize, format: "png" }
