--- a/app/views/communities/sections/electricity/_grid_capacity.html.haml
+++ b/app/views/communities/sections/electricity/_grid_capacity.html.haml
@@ -44,7 +44,7 @@
   / Tab Content
   .tab-content.mt-3
     #chart.tab-pane.fade.show.active
-      = pie_chart capacity_yearly_community_charts_path(@community), title: chart_title, suffix: "MW", donut: true, download: { background: "#ffffff", filename: chart_title.parameterize, format: "png" }, library: { plugins: { legend: { title: { display: true, text: "Fuel Type"}, display: true, position: 'left' } } }
+      = pie_chart capacity_yearly_community_charts_path(@community), title: chart_title, suffix: " MW", donut: true, download: { background: "#ffffff", filename: chart_title.parameterize, format: "png" }, library: {animation: { duration: 500 }, plugins: { legend: { title: { display: true, text: "Fuel Type"}, display: true, position: 'left' } } }
 
     #data.tab-pane.fade
       %table.table.table-striped.border{ data: { controller: 'datatables', datatables: { order_value: [1, 'desc']} } }
