--- a/app/views/communities/show.html.haml
+++ b/app/views/communities/show.html.haml
@@ -22,7 +22,7 @@
 
   .col-md-9
     %h1.mb-4 Community Summary
-    - section_order = ["electricity", "fuel_prices", "background", "related_datasets"]
+    - section_order = ["electricity", "fuel_prices", "background"]
 
     - section_order.each do |section|
       - section_id = "#{section.parameterize}-section"
