add better naming to tabs

--- a/app/views/communities/sections/_fuel_prices.html.haml
+++ b/app/views/communities/sections/_fuel_prices.html.haml
@@ -4,11 +4,11 @@
   .d-flex.justify-content-between.align-items-center
     .nav.nav-tabs
       %li.nav-item
-        = link_to "Chart", "#fuel-prices-chart",
+        = link_to "Seasonal Trends Chart", "#fuel-prices-chart",
           class: "nav-link active",
           data: { bs_toggle: "tab" }
       %li.nav-item
-        = link_to "Data", "#fuel-prices-data",
+        = link_to "Data Table", "#fuel-prices-data",
           class: "nav-link",
           data: { bs_toggle: "tab" }
 
