--- a/app/views/communities/sections/electricity/_utilities.html.haml
+++ b/app/views/communities/sections/electricity/_utilities.html.haml
@@ -24,5 +24,5 @@
       .d-flex.align-items-center.bg-body-secondary.rounded.p-3
         %i.bi.bi-diagram-3.text-info.fs-4.me-3
         .flex-grow-1
-          .text-muted= "Other Utilities on #{@community.grid.name}"
+          .text-muted= "Other Utilities on the #{@community.grid.name}"
           .fw-semibold= other_utilities.join(", ")
