Scope latest_year and stats for generation/capacity to grid

--- a/app/views/communities/sections/electricity/_grid_capacity.html.haml
+++ b/app/views/communities/sections/electricity/_grid_capacity.html.haml
@@ -1,4 +1,4 @@
-- stats = @community.grid.capacities.capacity_stats
+- stats = Capacity.capacity_stats_for(@community.grid)
 - chart_title = "#{@community.grid.name.titleize} Capacity by Fuel Type (#{stats[:year]})"
 
 %h4.mb-3 Grid Capacity
