--- a/app/views/communities/sections/electricity/production/_monthly_chart.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly_chart.html.haml
@@ -1,4 +1,4 @@
-- chart_title = "#{@community.grid.name.titleize} Net Generation by Month"
+- chart_title = "#{@community.grid.name.titleize} Net Generation by Month (#{MonthlyGeneration.latest_year_for(@community.grid)})"
 // Chart view
 = line_chart production_monthly_community_charts_path(@community), 
   title: chart_title, 
