--- a/app/views/communities/sections/electricity/production/_monthly_stats.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly_stats.html.haml
@@ -1,4 +1,4 @@
-- stats = @community.grid.monthly_generations.generation_stats
+- stats = MonthlyGeneration.generation_stats_for(@community.grid)
 
 .bg-body-secondary.p-3.rounded.my-3.d-flex.flex-wrap.justify-content-center.gap-4
   .d-flex.align-items-center
