--- a/app/views/communities/sections/electricity/production/_yearly_chart.html.haml
+++ b/app/views/communities/sections/electricity/production/_yearly_chart.html.haml
@@ -1,4 +1,4 @@
-- chart_title = "#{@community.grid.name.titleize} Net Generation by Type"
+- chart_title = "#{@community.grid.name.titleize} Net Generation by Fuel Type (#{YearlyGeneration.latest_year_for(@community.grid)})"
 = pie_chart production_yearly_community_charts_path(@community),
   title: chart_title,
   suffix: " MWh",
