--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -15,7 +15,7 @@
         %li.nav-item
           = link_to "Yearly Data", "#yearly-data", class: "nav-link", data: { bs_toggle: "tab" }
 
-  .tab-content
+  .tab-content.mt-3
     - if @community.grid&.monthly_generations&.exists?
       #monthly-chart.tab-pane.fade.show.active
         = render 'communities/sections/electricity/production/monthly_stats'
