--- a/app/views/communities/sections/electricity/production/_monthly_data.html.haml
+++ b/app/views/communities/sections/electricity/production/_monthly_data.html.haml
@@ -2,13 +2,15 @@
   %thead
     %tr
       %th Net Generation (MWh)
-      %th Fuel Type
+      %th Fuel Type Code
+      %th Fuel Type Name
       %th Month
       %th Year
   %tbody
     - @community.grid.monthly_generations.each do |generation|
       %tr
         %td= generation.net_generation_mwh
-        %td= generation.fuel_type
+        %td= generation.fuel_type_code
+        %td= generation.fuel_type_name
         %td= generation.month
         %td= generation.year
