--- a/app/views/metadata/_metadata.html.haml
+++ b/app/views/metadata/_metadata.html.haml
@@ -2,7 +2,8 @@
   %h4
     %i.bi.bi-database-fill
     = metadatum.title
-    %span.text-muted.small= "- #{metadatum.topics.join(',')}"
+    %span.text-muted.small
+      = "- #{metadatum.topics.map{ |s| s.to_s.titleize }.join(',')}"
 
   .mb-3
     %p= metadatum.description
