--- a/app/views/datasets/tabs/_about.html.haml
+++ b/app/views/datasets/tabs/_about.html.haml
@@ -1,39 +1,40 @@
-.row 
-  .col 
-    %p 
-      %strong Published:
-      = @dataset.publicationDate
+%p 
+  %strong Published:
+  = @dataset.publicationDate
 
-    %p
-      %strong Topics 
-      = @dataset.topic_list.join(', ')
+%p
+  %strong Topics 
+  = @dataset.topic_list.join(', ')
 
-    %p 
-      %strong Keywords: 
-      - @dataset.keywords.each do |tag|
-        %span.badge.bg-secondary= tag
+%p 
+  %strong Keywords: 
+  - @dataset.keywords.each do |tag|
+    %span.badge.bg-secondary= tag
 
-    %p 
-      %strong Format: 
-      %span.badge.bg-primary= @dataset.format
+%p 
+  %strong Format: 
+  %span.badge.bg-primary= @dataset.format
 
-  .col
-    %h3 Fields
-    %ul.list-group
-      - @dataset.schema['fields'].each do |field|
-        %li.list-group-item
-          %h4= field['long_name']
-          .mb-3= field['description']
-          .row.d-flex.gap-2
-            .col
-              %strong.text-nowrap Field Name
-              = field['name']
-            .col
-              %strong Type
-              %div= field['type']
-            .col
-              %strong Unit 
-              %div= field['unit']
-            .col
-              %strong Nullable
-              %div= field['nullable'] ? 'true' : 'false'
+- if @dataset.sources.any?
+  %p 
+    %strong Sources:
+    %ul.list-group.ms-3
+      - @dataset.sources.each do |source|
+        %li.list-group-item.overflow-hidden
+          .fw-bold= source['title']
+          .ms-2.me-auto
+            = source['description']
+            %div
+              %strong URL: 
+              = link_to source['path']
+
+- if @dataset.licenses.any?
+  %p 
+    %strong Licenses:
+    - @dataset.licenses.each do |license|
+      %div
+        %span This work is licensed under 
+        %span.fw-bold
+          = link_to license['path'], target: '_blank' do 
+            = license['name']
+            %i.bi.bi-link-45deg
