--- a/app/views/communities/sections/electricity/_sales_revenue_customers.html.haml
+++ b/app/views/communities/sections/electricity/_sales_revenue_customers.html.haml
@@ -1,2 +1,28 @@
-.placeholder-card
-  %h4 Sales, Revenue & Customers
+%h4.mb-3 Sales, Revenue & Customers
+
+- latest_sale = @community.reporting_entity.latest_sale
+- latest_year = latest_sale.year
+= render "communities/sections/electricity/sales/summary", latest_sale: latest_sale, latest_year: latest_year
+.mb-3
+  .d-flex.justify-content-between.align-items-center
+    .nav.nav-tabs
+      %li.nav-item
+        = link_to "Average Rates", "#average_rates",
+          class: "nav-link active",
+          data: { bs_toggle: "tab" }
+      %li.nav-item
+        = link_to "By Customer Type", "#by-customer-type",
+          class: "nav-link",
+          data: { bs_toggle: "tab" }
+      %li.nav-item
+        = link_to "Sales, Revenue & Customers Data", "#sales-data",
+          class: "nav-link",
+          data: { bs_toggle: "tab" }
+
+.tab-content
+  #average_rates.tab-pane.fade.show.active
+    = render "communities/sections/electricity/sales/average_rates", latest_sale: latest_sale, latest_year: latest_year
+  #by-customer-type.tab-pane.fade
+    = render "communities/sections/electricity/sales/by_customer_type", latest_sale: latest_sale, latest_year: latest_year
+  #sales-data.tab-pane.fade
+    = render "communities/sections/electricity/sales/data"
