Fixes to ui and layout, fix fuel prices nil to integer bug

--- a/app/views/communities/sections/background/_election_districts.html.haml
+++ b/app/views/communities/sections/background/_election_districts.html.haml
@@ -1,5 +1,7 @@
-%h4.mb-3 Election Districts
-
+.d-flex.align-items-center.mb-5
+  %i.bi.bi-map.me-2.fs-4
+  %h4.mb-0.me-3 Election Districts
+  %hr.flex-grow-1.mt-1.mb-0
 = render "communities/sections/background/election_districts/district_overview"
 
 / Navigation Tabs
