--- a/app/views/communities/sections/background/_transportation.html.haml
+++ b/app/views/communities/sections/background/_transportation.html.haml
@@ -1,7 +1,11 @@
-%h4.mb-3 Transportation
-%small.text-muted
-  %strong Last Updated:
-  = transportation.as_of_date
+.d-flex.align-items-center.mb-3
+  %i.bi.bi-car-front.me-2.fs-4
+  %h4.mb-0.me-3 Transportation
+  %hr.flex-grow-1.mt-1.mb-0
+.mb-3
+  %small.text-muted
+    %strong Last Updated:
+    = transportation.as_of_date
 
 .container-fluid.bg-body-secondary.rounded.p-3.mb-3
   .row.g-3
