--- a/app/views/communities/sections/_fuel_prices.html.haml
+++ b/app/views/communities/sections/_fuel_prices.html.haml
@@ -1,19 +1,24 @@
-%h4.mb-3 Fuel Prices
+- if @community.fuel_prices
+  .m-5.mt-3
+    .d-flex.align-items-center.mb-3
+      %i.bi.bi-fuel-pump-fill.me-2.fs-4
+      %h4.mb-0.me-3 Fuel Prices
+      %hr.flex-grow-1.mt-1.mb-0
 
-.mb-3
-  .d-flex.justify-content-between.align-items-center
-    .nav.nav-tabs
-      %li.nav-item
-        = link_to "Charts", "#fuel-prices-chart",
-          class: "nav-link active",
-          data: { bs_toggle: "tab" }
-      %li.nav-item
-        = link_to "Data Table", "#fuel-prices-data",
-          class: "nav-link",
-          data: { bs_toggle: "tab" }
+    .mb-3
+      .d-flex.justify-content-between.align-items-center
+        .nav.nav-tabs
+          %li.nav-item
+            = link_to "Charts", "#fuel-prices-chart",
+              class: "nav-link active",
+              data: { bs_toggle: "tab" }
+          %li.nav-item
+            = link_to "Fuel Price Data", "#fuel-prices-data",
+              class: "nav-link",
+              data: { bs_toggle: "tab" }
 
-.tab-content
-  #fuel-prices-chart.tab-pane.fade.show.active
-    = render "communities/sections/fuel_prices/chart"
-  #fuel-prices-data.tab-pane.fade
-    = render "communities/sections/fuel_prices/datatable"
+    .tab-content
+      #fuel-prices-chart.tab-pane.fade.show.active
+        = render "communities/sections/fuel_prices/chart"
+      #fuel-prices-data.tab-pane.fade
+        = render "communities/sections/fuel_prices/datatable"
