--- a/app/views/communities/sections/background/_geography.html.haml
+++ b/app/views/communities/sections/background/_geography.html.haml
@@ -1,4 +1,7 @@
-%h4.mb-3 Geography
+.d-flex.align-items-center.mb-3
+  %i.bi.bi-globe.me-2.fs-4
+  %h4.mb-0.me-3 Geography
+  %hr.flex-grow-1.mt-1.mb-0
 
 .row
   .col-md-4
