--- a/app/views/communities/sections/electricity/_production.html.haml
+++ b/app/views/communities/sections/electricity/_production.html.haml
@@ -1,4 +1,7 @@
-%h4.mb-3 Production
+.d-flex.align-items-center.mb-3
+  %i.bi.bi-building-gear.me-2.fs-4
+  %h4.mb-0.me-3 Production
+  %hr.flex-grow-1.mt-1.mb-0
 .mb-3
   = render 'communities/shared/grid_info'
     
