--- a/app/views/communities/sections/electricity/_rates.html.haml
+++ b/app/views/communities/sections/electricity/_rates.html.haml
@@ -1,26 +1,33 @@
 - if (latest_rate = @community.electric_rates.most_recent.first)
-  %h4.mb-3 Rates
+  .d-flex.align-items-center.mb-3
+    %i.bi.bi-coin.me-2.fs-4
+    %h4.mb-0.me-3 Rates
+    %hr.flex-grow-1.mt-1.mb-0
+
   .row.g-3
     - if latest_rate.residential_rate
-      .col-12.col-md-4
-        .d-flex.align-items-center.bg-body-secondary.rounded.p-3
-          %i.bi.bi-house-door-fill.text-primary.fs-3.me-3
-          .flex-grow-1
-            .text-muted Residential Rate (#{latest_rate.year})
-            .fw-semibold= number_to_currency(latest_rate.residential_rate, unit: "$") + "/kWh"
+      .col-12.col-md-6.col-lg-4
+        .d-flex.h-100
+          .d-flex.flex-grow-1.align-items-center.bg-body-secondary.rounded.p-3
+            %i.bi.bi-house-door-fill.text-primary.fs-3.me-3
+            .flex-grow-1
+              .text-muted Residential Rate (#{latest_rate.year})
+              .fw-semibold= number_to_currency(latest_rate.residential_rate, unit: "$") + "/kWh"
 
     - if latest_rate.commercial_rate
-      .col-12.col-md-4
-        .d-flex.align-items-center.bg-body-secondary.rounded.p-3
-          %i.bi.bi-buildings-fill.text-success.fs-3.me-3
-          .flex-grow-1
-            .text-muted Commercial Rate (#{latest_rate.year})
-            .fw-semibold= number_to_currency(latest_rate.commercial_rate, unit: "$") + "/kWh"
+      .col-12.col-md-6.col-lg-4
+        .d-flex.h-100
+          .d-flex.flex-grow-1.align-items-center.bg-body-secondary.rounded.p-3
+            %i.bi.bi-buildings-fill.text-success.fs-3.me-3
+            .flex-grow-1
+              .text-muted Commercial Rate (#{latest_rate.year})
+              .fw-semibold= number_to_currency(latest_rate.commercial_rate, unit: "$") + "/kWh"
 
     - if latest_rate.industrial_rate
-      .col-12.col-md-4
-        .d-flex.align-items-center.bg-body-secondary.rounded.p-3
-          %i.bi.bi-building-fill-gear.text-primary-emphasis.fs-3.me-3
-          .flex-grow-1
-            .text-muted Industrial Rate (#{latest_rate.year})
-            .fw-semibold= number_to_currency(latest_rate.industrial_rate, unit: "$") + "/kWh"
+      .col-12.col-md-6.col-lg-4
+        .d-flex.h-100
+          .d-flex.flex-grow-1.align-items-center.bg-body-secondary.rounded.p-3
+            %i.bi.bi-building-fill-gear.text-primary-emphasis.fs-3.me-3
+            .flex-grow-1
+              .text-muted Industrial Rate (#{latest_rate.year})
+              .fw-semibold= number_to_currency(latest_rate.industrial_rate, unit: "$") + "/kWh"
