--- a/app/views/static_pages/_whats_new.html.haml
+++ b/app/views/static_pages/_whats_new.html.haml
@@ -5,7 +5,7 @@
     .col-lg-10.mb-5
       %p.lead.text-muted.text-start.text-md-center
         The Alaska Energy Data Gateway (AEDG) provides essential energy and socioeconomic data tailored for Alaskan communities.
-        Our revitalized platform offers user-friendly access to updated datasets and community dashboards.
+        Our revitalized platform offers user-friendly access to updated datasets and community summaries.
         Explore how this data can empower your community today.
   .row.text-start.justify-content-center
     .col-md-4
