--- a/app/views/static_pages/_home_hero.html.haml
+++ b/app/views/static_pages/_home_hero.html.haml
@@ -24,6 +24,6 @@
       = link_to communities_path, class: "p-4 bg-white shadow rounded h-100 w-100 text-decoration-none text-dark hover-shadow" do
         .mb-2
           %i.bi.bi-house-fill.fs-2
-        %h5.fw-semibold Explore Community Dashboards
+        %h5.fw-semibold Explore Community Summaries
         %hr
         %p.text-muted Gain insights into the energy systems that shape Alaska’s communities
