Add images and lightbox to landing page

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -4,6 +4,7 @@
 @import 'rails_bootstrap_forms.css';
 @import "styles"; // Site SASS (assets/sass/styles.scss)
 @import "datatables.net-bs5/css/dataTables.bootstrap5";
+@import 'glightbox';
 
 @import "styles/communities";
 @import "maps";
