--- a/app/views/static_pages/_home_hero.html.haml
+++ b/app/views/static_pages/_home_hero.html.haml
@@ -1,7 +1,7 @@
 %section#home-hero.container.text-center.py-5
   = image_tag "aedg-logo.png", alt: "AEDG Logo", class: "img-fluid mb-5 w-50"
 
-  %h2.mb-5.fw-bold Energy Data for Alaskan Communities
+  %h2.mb-5.fw-bold Energy Data for Alaska Communities
 
   .row.justify-content-center.g-4
     .col-md-4.d-flex
