Move aedg_timeline content in yml file, update yml files for consistency, add markdownify to description

--- a/app/views/static_pages/_aedg_timeline.html.haml
+++ b/app/views/static_pages/_aedg_timeline.html.haml
@@ -15,5 +15,6 @@
         - aedg_timeline.each do |item|
           %li.timeline-item.mb-5
             %h5.mb-2.fw-bold= item[:date]
-            %p.text-muted.fw-bold= item[:title]
-            %p.text-muted= item[:desc]
+            %p.text-muted.fw-bold= (item[:title])
+            .text-muted
+              = markdownify(item[:description])
