--- a/app/views/static_pages/_data_creation_process.html.haml
+++ b/app/views/static_pages/_data_creation_process.html.haml
@@ -15,4 +15,4 @@
           %li.timeline-item.mb-5
             %h5.mb-2.fw-bold= item[:title]
             .text-muted
-              = markdownify(item[:desc])
+              = markdownify(item[:description])
