update monthly generation logic to allow for future years

--- a/app/views/communities/sections/electricity/_capacity.html.haml
+++ b/app/views/communities/sections/electricity/_capacity.html.haml
@@ -51,6 +51,7 @@
         title: chart_title,
         suffix: " MWh",
         donut: true,
+        thousands: ",",
         empty: "No Yearly Generation Data Available",
         loading: "Loading Yearly Generation Data...",
         library: { animation: { duration: 500 }, tooltip: { pointFormat: '{point.name}: <b>{point.y} MW</b>' }, plugins: { legend: { title: { display: true, text: "Fuel Type"}, display: true, position: 'left' } }   },
