--- a/app/views/communities/sections/electricity/_capacity.html.haml
+++ b/app/views/communities/sections/electricity/_capacity.html.haml
@@ -49,7 +49,7 @@
     #chart.tab-pane.fade.show.active
       = pie_chart capacity_yearly_community_charts_path(@community),
         title: chart_title,
-        suffix: " MWh",
+        suffix: " MW",
         donut: true,
         thousands: ",",
         empty: "No Yearly Generation Data Available",
